--- a/About Me index.html
+++ b/About Me index.html
@@ -11,6 +11,7 @@
 <link href="file:///Users/photography/Desktop/my%20website/Archive%20_updated0305/Books%20Index.html"/>
 <link href="file:///Users/mvmarkey/Desktop/Site/mvmarkey.github.io/index.html"/>
 <link href="https://mvmarkey.github.io/photography%20index.html"/>
+<link href="file:///Users/photography/Desktop/my%20website/Archive%20_updated0305/photoedit%20Index.html"/>
 <style>
 .sticky {
   position: -webkit-sticky;
@@ -39,6 +40,8 @@
             <span> <a class="name1"href="Books Index.html"style="text-decorations:none; color:inherit">Self-Published Books</a> </span>
             <!-- You can change the link in "href" -->
              <span> <a class="name1"href="photography index.html"style="text-decorations:none; color:inherit">Photography</a>  </span>
+             <!-- You can change the link in "href" -->
+             <span> <a class="name1"href="photoedit index.html"style="text-decorations:none; color:inherit">Photo Editing</a>  </span>
              <!-- You can change the link in "href" -->
           </h4>
 
