--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@ window.location = "https://mvmarkey.cargo.site/";
             <!-- You can change the link in "href" -->
              <span> <a class="name1"href="photography index.html"style="text-decorations:none; color:inherit">Photography</a>  </span>
              <!-- You can change the link in "href" -->
+             <span> <a class="name1"href="PhotoEdit index.html"style="text-decorations:none; color:inherit">Photo Editing</a>  </span>
+             <!-- You can change the link in "href" -->
           </h4>
 
 
