--- a/photography index.html
+++ b/photography index.html
@@ -11,6 +11,7 @@
   <link href="file:///Users/photography/Desktop/my%20website/Archive%20_updated0305/About%20Me%20index.html"/>
   <link href="file:///Users/photography/Desktop/my%20website/Archive%20_updated0305/Books%20Index.html"/>
   <link href="file:///Users/mvmarkey/Desktop/Site/mvmarkey.github.io/index.html"/>
+  <link href="file:///Users/photography/Desktop/my%20website/Archive%20_updated0305/photoedit%20Index.html"/>
 
 
 
@@ -41,6 +42,8 @@
             <span> <a class="name1"href="Books Index.html"style="text-decorations:none; color:inherit">Self-Published Books</a> </span>
             <!-- You can change the link in "href" -->
              <span> <a class="name1"href="photography index.html"style="text-decorations:none; color:inherit">Photography</a>  </span>
+             <!-- You can change the link in "href" -->
+             <span> <a class="name1"href="photoedit index.html"style="text-decorations:none; color:inherit">Photo Editing</a>  </span>
              <!-- You can change the link in "href" -->
 
           </h4>
@@ -75,10 +78,7 @@
         </a>
       </div>
         <div class="w3-col s3 w3-container">
-          <a class= "ChloeValorsoJewellery" href="javascript:void(0)" class="w3-hover-opacity" onclick="openImg('Forest')" style="text-decorations:none; color:inherit";>
-          Valorso 
-          </a>
-        </div>
+
     </div>
 
 
@@ -258,9 +258,7 @@
             <div class="item">
               <img src="images/VietnamPassing/vietnamwalkcopy.JPG" style="width:70%;position:relative; left: 1.5vw;">
             </div>
-            <div class="item">
-              <img src="images/VietnamPassing/vietnamfrogcopy.jpg" style="width:40%;position:relative; left: 13vw;">
-            </div>
+
           </div>
 
 
@@ -419,57 +417,10 @@
 
                     </div>
 
-                        <div id="Forest" class="picture w3-display-container" style="display:none">
 
-                          <div class="container">
-
-                            <div id="myCarousel5" class="carousel slide" data-ride="carousel">
-
-
-                                <!-- List of images -->
-                              </ol>
 
                               <!-- Wrapper for slides -->
-                              <div class="carousel-inner">
-                              <div class="item active">
-                                  <img src="images/valorsojewellery/seashellsolo.jpg" style="width:70%;position:relative; left: 1.5vw;">
-                                </div>
-                                <div class="item">
-                                  <img src="images/valorsojewellery/Ringclaws.jpg"  style="width:70%;position:relative; left: 1.5vw;">
-                                </div>
-                                <div class="item">
-                                  <img src="images/valorsojewellery/twoseashells.jpg"  style="width:70%;position:relative; left: 1.5vw;">
-                                </div>
-                                <div class="item">
-                                  <img src="images/valorsojewellery/ringclaw2.jpg" style="width:80%;position:relative; left: 1.5vw;">
-                                </div>
-                                <div class="item">
-                                  <img src="images/valorsojewellery/Earthyring.jpg" style="width:40%;position:relative; left: 13vw;">
-                                </div>
-                                <div class="item">
-                                  <img src="images/valorsojewellery/Planets.jpg"  style="width:70%;position:relative; left: 1.5vw;">
-                                </div>
-                                <div class="item">
-                                  <img src="images/valorsojewellery/Eyes.jpg"  style="width:70%;position:relative; left: 1.5vw;">
-                                </div>
-                                <div class="item">
-                                  <img src="images/valorsojewellery/Eyes2.jpg"  style="width:40%;position:relative; left: 13vw;">
-                                </div>
-                                <div class="item">
-                                  <img src="images/valorsojewellery/Ring2.jpg" style="width:70%;position:relative; left: 1.5vw;">
-                                </div>
-                                <div class="item">
-                                  <img src="images/valorsojewellery/Ring.jpg"  style="width:70%;position:relative; left: 1.5vw;">
-                                </div>
 
-
-                                  <!-- Left and right controls -->
-                                  <a class="left carousel-control" href="#myCarousel5" data-slide="prev">
-
-                                  </a>
-                                  <a class="right carousel-control" href="#myCarousel5" data-slide="next">
-
-                                  </a>
                                           </div>
                                         </div>
                                       </div>
