--- a/Books Index.html
+++ b/Books Index.html
@@ -12,6 +12,7 @@
 <link href="file:///Users/mvmarkey/Desktop/Site/mvmarkey.github.io/index.html" />
 <link href="file:///Users/mvmarkey/Desktop/my%20website/Archive%20_updated0305/Books%20Index.html"/>
 <link href="file:///Users/mvmarkey/Desktop/my%20website/Archive%20_updated0305/photography%20index.html"/>
+<link href="file:///Users/mvmarkey/Desktop/my%20website/Archive%20_updated0305/photoedit%20index.html"/>
 </head>
 
 <ul id="menu">
@@ -32,6 +33,8 @@
             <span> <a class="name1"href="Books Index.html"style="text-decorations:none; color:inherit">Self-Published Books</a> </span>
             <!-- You can change the link in "href" -->
              <span> <a class="name1"href="photography index.html"style="text-decorations:none; color:inherit">Photography</a>  </span>
+             <!-- You can change the link in "href" -->
+             <span> <a class="name1"href="photoedit index.html"style="text-decorations:none; color:inherit">Photo Editing</a>  </span>
              <!-- You can change the link in "href" -->
           </h4>
 
@@ -166,11 +169,11 @@ socio-political  themes in the work.<p></div>
                       <div class="carousel slide" id="myCarousel">
                           <!-- Carousel items -->
                           <div class="carousel-inner">
-                              <div class="active item" data-slide-number="0">
-                                  <img src="images/breakfast.png"></div>
                               <div class="item" data-slide-number="2">
                                   <img src="images/flowerbookediting1.png"></div>
-                              <div class="item" data-slide-number="3">
+                              <div class="active item" data-slide-number="3">
+                                      <img src="images/breakfast.png"></div>
+                              <div class="item" data-slide-number="0">
                                   <img src="images/redrose.JPG"></div>
 															<div class="item" data-slide-number="5">
 																	<img src="images/steamflower.jpg"></div>
