--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <link href="file:///Users/mvmarkey/Desktop/my%20website/Archive%20_updated0305/mvmarkey%20index.html" />
 <link href="file:///Users/mvmarkey/Desktop/my%20website/Archive%20_updated0305/Books%20Index.html"/>
 <link href="file:///Users/mvmarkey/Desktop/my%20website/Archive%20_updated0305/photography%20index.html"/>
+<link href="file:///Users/mvmarkey/Desktop/my%20website/Archive%20_updated0305/photoedit%20index.html"/>
 </head>
 
 
