--- a/Photoedit index.html
+++ b/Photoedit index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://use.typekit.net/rhq4hcw.css">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <title>Photo Editing</title>
-  <link href="photoedit site.css" rel="stylesheet" type="text/css" media="screen"/>
+  <link href="PhotoEdit site.css" rel="stylesheet" type="text/css" media="screen"/>
 <link href="file:///Users/mvmarkey/Desktop/Site/mvmarkey.github.io/index.html" />
 <link href="file:///Users/mvmarkey/Desktop/my%20website/Archive%20_updated0305/Books%20Index.html"/>
 <link href="file:///Users/mvmarkey/Desktop/my%20website/Archive%20_updated0305/photography%20index.html"/>
@@ -34,7 +34,7 @@
             <!-- You can change the link in "href" -->
              <span> <a class="name1"href="photography index.html"style="text-decorations:none; color:inherit">Photography</a>  </span>
              <!-- You can change the link in "href" -->
-             <span> <a class="name1"href="photoedit index.html"style="text-decorations:none; color:inherit">Photo Editing</a>  </span>
+             <span> <a class="name1"href="PhotoEdit index.html"style="text-decorations:none; color:inherit">Photo Editing</a>  </span>
              <!-- You can change the link in "href" -->
           </h4>
 
