--- a/Edit index.html
+++ b/Edit index.html
@@ -8,11 +8,11 @@
   <link rel="stylesheet" href="https://use.typekit.net/rhq4hcw.css">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <title>Photo Editing</title>
-  <link href="PhotoEdit site.css" rel="stylesheet" type="text/css" media="screen"/>
+  <link href="Edit site.css" rel="stylesheet" type="text/css" media="screen"/>
 <link href="file:///Users/mvmarkey/Desktop/Site/mvmarkey.github.io/index.html" />
 <link href="file:///Users/mvmarkey/Desktop/my%20website/Archive%20_updated0305/Books%20Index.html"/>
 <link href="file:///Users/mvmarkey/Desktop/my%20website/Archive%20_updated0305/photography%20index.html"/>
-<link href="file:///Users/mvmarkey/Desktop/my%20website/Archive%20_updated0305/PhotoEdit%20index.html"/>
+<link href="file:///Users/mvmarkey/Desktop/my%20website/Archive%20_updated0305/Edit%20index.html"/>
 </head>
 
 <ul id="menu">
@@ -34,10 +34,9 @@
             <!-- You can change the link in "href" -->
              <span> <a class="name1"href="photography index.html"style="text-decorations:none; color:inherit">Photography</a>  </span>
              <!-- You can change the link in "href" -->
-             <span> <a class="name1"href="PhotoEdit index.html"style="text-decorations:none; color:inherit">Photo Editing</a>  </span>
+             <span> <a class="name1"href="Edit index.html"style="text-decorations:none; color:inherit">Photo Editing</a>  </span>
              <!-- You can change the link in "href" -->
           </h4>
-
 
           </li>
         </ul>
@@ -59,7 +58,6 @@
   <p><i>The Sunday Times</i><br>Story: 2022 in Pictures <br>Photographer: Jack Hill<br> Print Edition
 
     </div>
-
 
 
 
