--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <link href="file:///Users/mvmarkey/Desktop/my%20website/Archive%20_updated0305/mvmarkey%20index.html" />
 <link href="file:///Users/mvmarkey/Desktop/my%20website/Archive%20_updated0305/Books%20Index.html"/>
 <link href="file:///Users/mvmarkey/Desktop/my%20website/Archive%20_updated0305/photography%20index.html"/>
-<link href="file:///Users/mvmarkey/Desktop/my%20website/Archive%20_updated0305/photoedit%20index.html"/>
+<link href="file:///Users/mvmarkey/Desktop/my%20website/Archive%20_updated0305/Edit%20index.html"/>
 </head>
 
 
@@ -51,7 +51,7 @@ window.location = "https://mvmarkey.cargo.site/";
             <!-- You can change the link in "href" -->
              <span> <a class="name1"href="photography index.html"style="text-decorations:none; color:inherit">Photography</a>  </span>
              <!-- You can change the link in "href" -->
-             <span> <a class="name1"href="PhotoEdit index.html"style="text-decorations:none; color:inherit">Photo Editing</a>  </span>
+             <span> <a class="name1"href="Edit index.html"style="text-decorations:none; color:inherit">Photo Editing</a>  </span>
              <!-- You can change the link in "href" -->
           </h4>
 
