--- a/Books Index.html
+++ b/Books Index.html
@@ -34,7 +34,7 @@
             <!-- You can change the link in "href" -->
              <span> <a class="name1"href="photography index.html"style="text-decorations:none; color:inherit">Photography</a>  </span>
              <!-- You can change the link in "href" -->
-             <span> <a class="name1"href="photoedit index.html"style="text-decorations:none; color:inherit">Photo Editing</a>  </span>
+             <span> <a class="name1"href="Edit index.html"style="text-decorations:none; color:inherit">Photo Editing</a>  </span>
              <!-- You can change the link in "href" -->
           </h4>
 
