--- a/About Me index.html
+++ b/About Me index.html
@@ -11,7 +11,8 @@
 <link href="file:///Users/photography/Desktop/my%20website/Archive%20_updated0305/Books%20Index.html"/>
 <link href="file:///Users/mvmarkey/Desktop/Site/mvmarkey.github.io/index.html"/>
 <link href="https://mvmarkey.github.io/photography%20index.html"/>
-<link href="file:///Users/mvmarkey/Desktop/my%20website/Archive%20_updated0305/photoedit%20index.html"/>
+<link href="file:///Users/mvmarkey/Desktop/my%20website/Archive%20_updated0305/Edit%20index.html"/>
+</head>
 <style>
 .sticky {
   position: -webkit-sticky;
