--- a/photography index.html
+++ b/photography index.html
@@ -13,7 +13,7 @@
   <link href="file:///Users/mvmarkey/Desktop/Site/mvmarkey.github.io/index.html"/>
 <link href="file:///Users/mvmarkey/Desktop/my%20website/Archive%20_updated0305/Edit%20index.html"/>
 
-
+</head>
 
   <title>photography</title>
 
@@ -43,7 +43,7 @@
             <!-- You can change the link in "href" -->
              <span> <a class="name1"href="photography index.html"style="text-decorations:none; color:inherit">Photography</a>  </span>
              <!-- You can change the link in "href" -->
-             <span> <a class="name1"href="photoedit index.html"style="text-decorations:none; color:inherit">Photo Editing</a>  </span>
+             <span> <a class="name1"href="Edit index.html"style="text-decorations:none; color:inherit">Photo Editing</a>  </span>
              <!-- You can change the link in "href" -->
 
           </h4>
